Standardise Username Field
Renamed it to "username" rather than "name".
